--- a/trunk/android/res/xml/preferences.xml
+++ b/trunk/android/res/xml/preferences.xml
@@ -32,10 +32,22 @@
             android:title="@string/dialog_based_preferences">
 
         <EditTextPreference
-                android:key="edittext_preference"
+                android:key="hostname_preference"
                 android:title="@string/title_edittext_preference"
                 android:summary="@string/summary_edittext_preference"
+                
+                android:defaultValue="@string/default_hostname_string"
                 android:dialogTitle="@string/dialog_title_edittext_preference" />
+                
+                
+        <EditTextPreference
+                android:key="port_preference"
+                android:title="@string/title_editint_preference"
+                android:summary="@string/summary_editint_preference"
+                
+                android:defaultValue="@string/default_port_number"
+                android:dialogTitle="@string/dialog_title_editint_preference" />
+
                 
         <ListPreference
                 android:key="list_preference"
