--- a/trunk/android/res/layout/main.xml
+++ b/trunk/android/res/layout/main.xml
@@ -4,9 +4,22 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
+    
+<EditText
+    android:id="@+id/my_edittext"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:text="@string/hello"
     />
+    
+    
+    
+<Button
+    android:id="@+id/my_button"
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="Deposit text"
+    />
+    
+    
 </LinearLayout>
