--- a/trunk/android/res/layout/main.xml
+++ b/trunk/android/res/layout/main.xml
@@ -2,9 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     >
-    
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    >
+<TextView android:text="Send to:"
+   android:layout_width="wrap_content" android:layout_height="wrap_content" />
+
+<Spinner android:id="@+id/flinger_destination_selector"
+    android:layout_width="fill_parent" android:layout_height="wrap_content"></Spinner>
+
+</LinearLayout>
+
 <EditText
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
