--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -3,34 +3,51 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
     android:layout_weight="1"
     >
-<TextView android:text="Send to:"
-   android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
-<Spinner android:id="@+id/flinger_destination_selector"
-    android:layout_width="fill_parent" android:layout_height="wrap_content"></Spinner>
 
-</LinearLayout>
-
-<EditText
+    
+    
+<ImageButton
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    android:id="@+id/flingertext"/>
-    
+    android:src="@drawable/moon"
+    android:id="@+id/screen_blank_button"/>
     
     
 <Button
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="Deposit text"
-    android:id="@+id/textflinger_button"/>
+    android:text="Media Controls"
+    android:id="@+id/media_button"/>
+    
+    
+<ImageButton
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:src="@drawable/lightbulb_off"
+    android:id="@+id/x10_button"/>
+    
+
+<Button
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="Invoke Script"
+    android:id="@+id/scripts_button"/>
+    
+<Button
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="Idea Jotter"
+    android:id="@+id/jotter_button"/>
+    
+    
+    <ImageButton
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:src="@drawable/minibuntu"
+    android:id="@+id/logo_button"/>
     
     
 </LinearLayout>
