--- a/trunk/android/res/layout/main.xml
+++ b/trunk/android/res/layout/main.xml
@@ -50,4 +50,9 @@
     android:id="@+id/logo_button"/>
     
     
+<Button
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="Wake on LAN"
+    android:id="@+id/wol_button"/>
 </LinearLayout>
